--- a/src/gui/branch_manager/RegNewAccountP1Screen.fxml
+++ b/src/gui/branch_manager/RegNewAccountP1Screen.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -12,14 +13,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<VBox stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.RegNewAccountP1Controller">
+<VBox prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.RegNewAccountP1Controller">
    <children>
       <AnchorPane prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;">
          <children>
             <HBox layoutX="250.0" layoutY="59.0" />
-            <GridPane layoutX="404.0" layoutY="227.0" prefHeight="269.0" prefWidth="422.0">
+            <GridPane layoutX="390.0" layoutY="105.0" prefHeight="269.0" prefWidth="422.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="215.0" minWidth="10.0" prefWidth="173.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="215.0" minWidth="10.0" prefWidth="173.0" />
@@ -34,12 +34,12 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <TextField fx:id="first_name_lbl" prefHeight="25.0" prefWidth="136.0" promptText="First name" styleClass="textinput" />
-                  <TextField fx:id="last_name_lbl" promptText="Last name" styleClass="textinput" GridPane.rowIndex="1" />
-                  <TextField fx:id="id_lbl" promptText="ID" styleClass="textinput" GridPane.rowIndex="2" />
-                  <TextField fx:id="telephone_lbl" promptText="Telephone" styleClass="textinput" GridPane.rowIndex="3" />
-                  <TextField fx:id="email_lbl" promptText="Email address " styleClass="textinput" GridPane.rowIndex="4" />
-                  <TextField fx:id="confirm_email_lbl" prefHeight="25.0" prefWidth="199.0" promptText="Confirm email address" styleClass="textinput" GridPane.rowIndex="5" />
+                  <TextField fx:id="first_name_lbl" prefHeight="25.0" prefWidth="136.0" promptText="First name" styleClass="text-box" />
+                  <TextField fx:id="last_name_lbl" promptText="Last name" styleClass="text-box" GridPane.rowIndex="1" />
+                  <TextField fx:id="id_lbl" promptText="ID" styleClass="text-box" GridPane.rowIndex="2" />
+                  <TextField fx:id="telephone_lbl" promptText="Telephone" styleClass="text-box" GridPane.rowIndex="3" />
+                  <TextField fx:id="email_lbl" promptText="Email address " styleClass="text-box" GridPane.rowIndex="4" />
+                  <TextField fx:id="confirm_email_lbl" prefHeight="25.0" prefWidth="199.0" promptText="Confirm email address" styleClass="text-box" GridPane.rowIndex="5" />
                   <Label fx:id="first_error_lbl" prefHeight="17.0" prefWidth="248.0" textFill="RED" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" />
@@ -73,38 +73,34 @@
                   <Label fx:id="res_lbl" prefHeight="17.0" prefWidth="215.0" GridPane.rowIndex="6" />
                </children>
             </GridPane>
-            <ImageView fitHeight="332.0" fitWidth="319.0" layoutX="367.0" layoutY="508.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="263.0" fitWidth="298.0" layoutX="614.0" layoutY="319.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/AccountRegImage.png" />
                </image>
             </ImageView>
-            <Button id="NextPageBtn" fx:id="next_btn" layoutX="477.0" layoutY="490.0" mnemonicParsing="false" onAction="#NextPage" prefHeight="35.0" prefWidth="56.0" styleClass="btn" text="Next" />
-            <Button fx:id="before_btn" layoutX="51.0" layoutY="710.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="56.0" styleClass="btn" text="Back" />
-            <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="367.0" layoutY="234.0" pickOnBounds="true" preserveRatio="true">
+            <Button id="NextPageBtn" fx:id="next_btn" layoutX="463.0" layoutY="440.0" mnemonicParsing="false" onAction="#NextPage" prefHeight="35.0" prefWidth="56.0" styleClass="btn" text="Next" />
+            <Button fx:id="before_btn" layoutX="50.0" layoutY="587.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="56.0" styleClass="btn" text="Back" />
+            <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="367.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/UserIcon.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="367.0" layoutY="312.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="367.0" layoutY="189.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/IDIcon.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="367.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="367.0" layoutY="228.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/PhoneIcon.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="367.0" layoutY="392.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="25.0" fitWidth="23.0" layoutX="367.0" layoutY="264.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/emailIcon.png" />
                </image>
             </ImageView>
-            <Label layoutX="250.0" layoutY="85.0" text="Register new account">
-               <font>
-                  <Font name="Levenim MT Bold" size="48.0" />
-               </font>
-            </Label>
+            <Hyperlink fx:id="UserHasAccount_lbl" layoutX="410.0" layoutY="374.0" onAction="#openReg2" text="User already has an account?" />
          </children>
       </AnchorPane>
    </children>
