--- a/src/gui/general/index2Screen.fxml
+++ b/src/gui/general/index2Screen.fxml
@@ -64,16 +64,20 @@
                               <ComboBox fx:id="comboBoxBranch" editable="true" layoutX="120.0" layoutY="91.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="32.0" prefWidth="131.0" promptText="Change branch" style="-fx-background-color: #F7C665;" />
                            </children>
                         </AnchorPane>
-                        <Label fx:id="welcome_label" alignment="CENTER" contentDisplay="CENTER" text="Welcome to BiteMe" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" translateX="180.0" translateY="20.0" HBox.hgrow="ALWAYS">
-                           <font>
-                              <Font name="Levenim MT Bold" size="64.0" />
-                           </font>
-                        </Label>
-                        <ImageView fitHeight="149.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="240.0" translateY="10.0" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../img/app_logo.png" />
-                           </image>
-                        </ImageView>
+                        <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="505.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label fx:id="welcome_label" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="770.0" text="Welcome to BiteMe" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
+                                 <font>
+                                    <Font name="Levenim MT Bold" size="64.0" />
+                                 </font>
+                              </Label>
+                              <ImageView fitHeight="149.0" fitWidth="223.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/app_logo.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </HBox>
                      </children>
                      <cursor>
                         <Cursor fx:constant="DEFAULT" />
