--- a/bin/order/PaymentStatusScreen.fxml
+++ b/bin/order/PaymentStatusScreen.fxml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.PaymentStatusController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.PaymentStatusController">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
          <children>
-            <Label layoutX="266.0" layoutY="58.0" text="Payment Status" />
-            <Button fx:id="confirm_btn" layoutX="351.0" layoutY="297.0" mnemonicParsing="false" onAction="#confirm" text="Confirm" />
-            <Button fx:id="cancel_btn" layoutX="217.0" layoutY="297.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
+            <Label layoutX="236.0" layoutY="56.0" prefHeight="25.0" prefWidth="128.0" styleClass="lblWitoutSize" stylesheets="@../general/GeneralStyleSheet.css" text="Payment Status">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font></Label>
+            <Button fx:id="confirm_btn" layoutX="351.0" layoutY="297.0" mnemonicParsing="false" onAction="#confirm" stylesheets="@../general/GeneralStyleSheet.css" text="Confirm">
+               <styleClass>
+                  <String fx:value="ViewBtnOrange" />
+                  <String fx:value="lbl" />
+               </styleClass></Button>
+            <Button fx:id="cancel_btn" layoutX="217.0" layoutY="297.0" mnemonicParsing="false" onAction="#cancel" stylesheets="@../general/GeneralStyleSheet.css" text="Cancel">
+               <styleClass>
+                  <String fx:value="ViewBtn" />
+                  <String fx:value="lbl" />
+               </styleClass></Button>
             <HBox alignment="CENTER" layoutX="22.0" layoutY="91.0" prefHeight="191.0" prefWidth="561.0">
                <children>
                   <Label fx:id="status_txt" HBox.hgrow="ALWAYS" />
