--- a/bin/menu/createMenu.fxml
+++ b/bin/menu/createMenu.fxml
@@ -1,41 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menu.CreateNewMenuController">
+<VBox prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menu.CreateNewMenuController">
    <children>
-      <AnchorPane prefHeight="650.0" prefWidth="1010.0">
+      <AnchorPane prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;">
          <children>
-            <Label alignment="CENTER" layoutX="-3.0" layoutY="81.0" prefHeight="35.0" prefWidth="700.0" text="Create New Menu" textAlignment="CENTER" AnchorPane.bottomAnchor="515.0" AnchorPane.leftAnchor="-3.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="81.0">
+            <Label alignment="CENTER" layoutX="-3.0" prefHeight="35.0" prefWidth="700.0" text="Create New Menu" textAlignment="CENTER" AnchorPane.bottomAnchor="596.0" AnchorPane.leftAnchor="-3.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="0.0">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label layoutX="342.0" layoutY="238.0" prefHeight="20.0" prefWidth="81.0" text="Menu Type:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="343.0" layoutY="306.0" prefHeight="18.0" prefWidth="96.0" text="Choose Dishes:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Button fx:id="createMenu" layoutX="619.0" layoutY="568.0" mnemonicParsing="false" onAction="#createNewMenu" text="create" />
-            <ListView fx:id="DishesInBranchList" layoutX="504.0" layoutY="326.0" prefHeight="185.0" prefWidth="150.0" AnchorPane.topAnchor="326.0" />
-            <Label fx:id="createMessageLabel" layoutX="347.0" layoutY="542.0" prefHeight="18.0" prefWidth="338.0" />
-            <ComboBox fx:id="ChooseMenuTypeComboBox" layoutX="496.0" layoutY="233.0" onAction="#chooseType" prefHeight="29.0" prefWidth="165.0" promptText="Choose Menu Type" />
-            <Label layoutX="347.0" layoutY="184.0" prefHeight="18.0" prefWidth="88.0" text="Restaurant ID:" />
-            <TextField fx:id="MyRestaurantID" layoutX="499.0" layoutY="171.0" prefHeight="26.0" prefWidth="159.0" promptText="My Restaurant ID" />
-            <Label fx:id="listViewMessageLabel" layoutX="343.0" layoutY="281.0" prefHeight="18.0" prefWidth="485.0" />
+            <Button fx:id="saveMenu" layoutX="457.0" layoutY="584.0" mnemonicParsing="false" onAction="#saveMenu" text="save menu" />
+            <ListView fx:id="DishesList" layoutX="301.0" layoutY="142.0" onMouseClicked="#setDishFields" prefHeight="134.0" prefWidth="169.0" AnchorPane.topAnchor="142.0" />
+            <Label fx:id="createMessageLabel" layoutX="414.0" layoutY="575.0" prefHeight="18.0" prefWidth="325.0" />
+            <ComboBox fx:id="ChooseMenuTypeComboBox" layoutX="383.0" layoutY="68.0" onAction="#chooseType" prefHeight="29.0" prefWidth="245.0" promptText="Dish Type" />
+            <Label fx:id="chooseDishMessage" layoutX="309.0" layoutY="120.0" prefHeight="18.0" prefWidth="156.0" />
+            <TextField fx:id="dishPrice" layoutX="424.0" layoutY="291.0" prefHeight="26.0" prefWidth="245.0" promptText="Price" />
+            <CheckBox fx:id="hasMultipleSizes" layoutX="337.0" layoutY="428.0" mnemonicParsing="false" text="Multiple sizes" />
+            <CheckBox fx:id="hasMultipleCockingLvls" layoutX="337.0" layoutY="464.0" mnemonicParsing="false" text="Multiple cooking levels" />
+            <CheckBox fx:id="canAddExtras" layoutX="334.0" layoutY="499.0" mnemonicParsing="false" text="Extras" />
+            <TextField fx:id="ImageName" layoutX="424.0" layoutY="353.0" prefHeight="26.0" prefWidth="139.0" promptText="Image Name" />
+            <Button fx:id="ChooseImege" layoutX="562.0" layoutY="350.0" mnemonicParsing="false" onAction="#ChooseImege" text="Choose Image" />
+            <Label fx:id="errorMessage" layoutX="14.0" layoutY="45.0" prefHeight="18.0" prefWidth="357.0" />
+            <ListView fx:id="dishesToAdd" layoutX="563.0" layoutY="142.0" onMouseClicked="#displayDish" prefHeight="134.0" prefWidth="156.0" />
+            <Label fx:id="dishesToAddMessage" layoutX="568.0" layoutY="120.0" prefHeight="18.0" prefWidth="146.0" />
+            <Label fx:id="fileChooserMsg" layoutX="323.0" layoutY="398.0" prefHeight="18.0" prefWidth="343.0" />
+            <ImageView fx:id="rightarrw_img" fitHeight="32.0" fitWidth="36.0" layoutX="502.0" layoutY="156.0" onMouseClicked="#saveDish" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/rightarrow.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="leftarrow_img" fitHeight="32.0" fitWidth="36.0" layoutX="502.0" layoutY="206.0" onMouseClicked="#deleteDishFromMenu" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/leftarrow.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="plus_img" fitHeight="29.0" fitWidth="32.0" layoutX="272.0" layoutY="142.0" onMouseClicked="#AddDish" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/plus.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
