--- a/src/gui/menu/AddDishScreen.fxml
+++ b/src/gui/menu/AddDishScreen.fxml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menu.AddDishController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menu.AddDishController">
    <children>
       <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
          <children>
-            <TextField fx:id="dish_name_input" layoutX="420.0" layoutY="261.0" text="Dish Name" />
-            <ComboBox fx:id="dish_type_cmb" layoutX="419.0" layoutY="325.0" prefWidth="150.0" promptText="Dish Type" />
-            <Button fx:id="add_btn" layoutX="452.0" layoutY="409.0" mnemonicParsing="false" onAction="#addDish" text="Add Dish" />
+            <TextField fx:id="dish_name_input" layoutX="226.0" layoutY="115.0" promptText="Dish Name" />
+            <Button fx:id="add_btn" layoutX="268.0" layoutY="200.0" mnemonicParsing="false" onAction="#addDish" text="Add Dish" />
             <Label fx:id="result_lbl" layoutX="470.0" layoutY="468.0" />
          </children>
       </Pane>
