--- a/bin/order/PaymentStatusScreen.fxml
+++ b/bin/order/PaymentStatusScreen.fxml
@@ -16,12 +16,12 @@
                <font>
                   <Font name="System Bold" size="16.0" />
                </font></Label>
-            <Button fx:id="confirm_btn" layoutX="351.0" layoutY="297.0" mnemonicParsing="false" onAction="#confirm" stylesheets="@../general/GeneralStyleSheet.css" text="Confirm">
+            <Button fx:id="confirm_btn" layoutX="323.0" layoutY="297.0" mnemonicParsing="false" onAction="#confirm" prefHeight="34.0" prefWidth="82.0" stylesheets="@../general/GeneralStyleSheet.css" text="Confirm">
                <styleClass>
                   <String fx:value="ViewBtnOrange" />
                   <String fx:value="lbl" />
                </styleClass></Button>
-            <Button fx:id="cancel_btn" layoutX="217.0" layoutY="297.0" mnemonicParsing="false" onAction="#cancel" stylesheets="@../general/GeneralStyleSheet.css" text="Cancel">
+            <Button fx:id="cancel_btn" layoutX="203.0" layoutY="297.0" mnemonicParsing="false" onAction="#cancel" stylesheets="@../general/GeneralStyleSheet.css" text="Cancel">
                <styleClass>
                   <String fx:value="ViewBtn" />
                   <String fx:value="lbl" />
