--- a/bin/branch_manager/MyEmployersScreen.fxml
+++ b/bin/branch_manager/MyEmployersScreen.fxml
@@ -7,14 +7,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
 <VBox prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.MyEmployersController">
    <children>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-         <children>
-            <Label id="title_lbl" stylesheets="@../general/GeneralStyleSheet.css" text="My Employers" />
-         </children>
-      </HBox>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" />
       <VBox fx:id="waiting_for_approval_vbox" prefHeight="200.0" prefWidth="100.0">
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0">
@@ -29,7 +24,7 @@
             <Accordion fx:id="waiting_for_approval_accordion" />
          </children>
       </VBox>
-      <Separator prefWidth="200.0" />
+      <Separator prefWidth="200.0" style="-fx-background-color: #F7C665;" />
       <VBox fx:id="approved_vbox" prefHeight="200.0" prefWidth="100.0">
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0">
