--- a/bin/order/OrderConfirmedScreen.fxml
+++ b/bin/order/OrderConfirmedScreen.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -72,15 +70,7 @@
                               <Label fx:id="total_payment_label" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Total Payment: " />
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                           <children>
-                              <Button fx:id="home_btn" mnemonicParsing="false" onAction="#goHome" stylesheets="@../general/GeneralStyleSheet.css" text="Home">
-                                 <styleClass>
-                                    <String fx:value="ViewBtnOrange" />
-                                    <String fx:value="lbl" />
-                                 </styleClass></Button>
-                           </children>
-                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" />
                      </children>
                   </VBox>
                </center>
