--- a/src/gui/branch_manager/ChangeUserStatusScreen.fxml
+++ b/src/gui/branch_manager/ChangeUserStatusScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -9,26 +10,46 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.ChangeUserStatusController">
+<VBox style="-fx-background-color: #ffff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.ChangeUserStatusController">
    <children>
       <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0">
          <children>
             <TableView fx:id="table" layoutX="32.0" layoutY="80.0" prefHeight="378.0" prefWidth="952.0">
               <columns>
-                <TableColumn fx:id="name_col" prefWidth="251.0" text="Name" />
-                <TableColumn fx:id="id_col" minWidth="0.0" prefWidth="125.0" text="ID" />
-                  <TableColumn fx:id="pAccount_col" prefWidth="167.0" text="Private Account" />
-                  <TableColumn fx:id="bAccount_col" prefWidth="242.0" text="Business Account" />
-                  <TableColumn fx:id="status_col" prefWidth="167.0" text="Status" />
+                <TableColumn fx:id="name_col" prefWidth="251.0" styleClass="lbl" text="Name" />
+                <TableColumn fx:id="id_col" minWidth="0.0" prefWidth="125.0" styleClass="lbl" text="ID" />
+                  <TableColumn fx:id="pAccount_col" prefWidth="167.0" styleClass="lbl" text="Private Account" />
+                  <TableColumn fx:id="bAccount_col" prefWidth="242.0" styleClass="lbl" text="Business Account" />
+                  <TableColumn fx:id="status_col" prefWidth="167.0" styleClass="lbl" text="Status" />
               </columns>
             </TableView>
-            <TextField fx:id="search_txt" layoutX="453.0" layoutY="29.0" promptText="Enter ID" />
-            <Button fx:id="search_btn" layoutX="658.0" layoutY="29.0" mnemonicParsing="false" text="Search" />
-            <ComboBox fx:id="status_cmb" layoutX="245.0" layoutY="475.0" prefWidth="150.0" />
+            <TextField fx:id="search_txt" layoutX="453.0" layoutY="29.0" promptText="Enter ID" stylesheets="@../general/GeneralStyleSheet.css">
+               <styleClass>
+                  <String fx:value="text-box" />
+                  <String fx:value="lbl" />
+               </styleClass></TextField>
+            <Button fx:id="search_btn" layoutX="658.0" layoutY="29.0" mnemonicParsing="false" text="Search">
+               <styleClass>
+                  <String fx:value="ViewBtnOrange" />
+                  <String fx:value="lbl" />
+               </styleClass></Button>
+            <ComboBox fx:id="status_cmb" layoutX="245.0" layoutY="475.0" prefWidth="150.0">
+               <styleClass>
+                  <String fx:value="comboBox" />
+                  <String fx:value="lbl" />
+               </styleClass></ComboBox>
             <Label fx:id="selected_lbl" layoutX="275.0" layoutY="644.0" prefHeight="17.0" prefWidth="730.0" />
-            <Label layoutX="180.0" layoutY="480.0" text="Status" />
-            <Button fx:id="update_btn" layoutX="395.0" layoutY="518.0" mnemonicParsing="false" onAction="#update" text="Update" />
-            <Button fx:id="back_btn" layoutX="33.0" layoutY="589.0" mnemonicParsing="false" text="Back" />
+            <Label layoutX="180.0" layoutY="480.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Status" />
+            <Button fx:id="update_btn" layoutX="395.0" layoutY="518.0" mnemonicParsing="false" onAction="#update" stylesheets="@../general/GeneralStyleSheet.css" text="Update">
+               <styleClass>
+                  <String fx:value="ViewBtnOrange" />
+                  <String fx:value="lbl" />
+               </styleClass></Button>
+            <Button fx:id="back_btn" layoutX="33.0" layoutY="587.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="64.0" text="Back">
+               <styleClass>
+                  <String fx:value="ViewBtn" />
+                  <String fx:value="lbl" />
+               </styleClass></Button>
          </children>
       </Pane>
    </children>
