--- a/src/gui/branch_manager/RegNewAccountP2Screen.fxml
+++ b/src/gui/branch_manager/RegNewAccountP2Screen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -10,35 +11,49 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.RegNewAccountP2Controller">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.RegNewAccountP2Controller">
    <children>
-      <AnchorPane>
+      <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
          <children>
-            <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css">
+            <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <TextField fx:id="cc_lbl" layoutX="419.0" layoutY="179.0" promptText="Credit Card Number" styleClass="text-box" />
-                  <TextField fx:id="employer_name_lbl" layoutX="417.0" layoutY="313.0" promptText="Employer Name" styleClass="text-box" />
-                  <Button fx:id="back_btn" layoutX="40.0" layoutY="590.0" mnemonicParsing="false" onAction="#BackPage" styleClass="btn" text="Back" />
-                  <Button fx:id="reg_btn" layoutX="460.0" layoutY="431.0" mnemonicParsing="false" onAction="#RegisterAccount" styleClass="btn" text="Register" />
+                  <TextField fx:id="cc_lbl" layoutX="419.0" layoutY="179.0" promptText="Credit Card Number">
+                     <styleClass>
+                        <String fx:value="text-box" />
+                        <String fx:value="lbl" />
+                     </styleClass></TextField>
+                  <TextField fx:id="employer_name_lbl" layoutX="417.0" layoutY="313.0" promptText="Employer Name">
+                     <styleClass>
+                        <String fx:value="text-box" />
+                        <String fx:value="lbl" />
+                     </styleClass></TextField>
+                  <Button fx:id="back_btn" layoutX="40.0" layoutY="580.0" mnemonicParsing="false" onAction="#BackPage" prefHeight="44.0" prefWidth="67.0" text="Back">
+                     <styleClass>
+                        <String fx:value="ViewBtn" />
+                        <String fx:value="lbl" />
+                     </styleClass></Button>
+                  <Button fx:id="reg_btn" layoutX="460.0" layoutY="421.0" mnemonicParsing="false" onAction="#RegisterAccount" prefHeight="44.0" prefWidth="80.0" text="Register">
+                     <styleClass>
+                        <String fx:value="ViewBtnOrange" />
+                        <String fx:value="lbl" />
+                     </styleClass></Button>
                   <Label fx:id="res_lbl" layoutX="375.0" layoutY="403.0" prefHeight="17.0" prefWidth="260.0" textFill="RED" />
                   <Label fx:id="cc_error_lbl" layoutX="584.0" layoutY="183.0" prefHeight="17.0" prefWidth="227.0" textFill="RED" />
                   <Label fx:id="employer_name_error_lbl" layoutX="584.0" layoutY="317.0" prefHeight="17.0" prefWidth="200.0" textFill="RED" />
-                  <TextField fx:id="budget_lbl" layoutX="419.0" layoutY="365.0" promptText="Monthly Budget " styleClass="text-box" />
-                  <CheckBox fx:id="BusinessCheckBox" layoutX="437.0" layoutY="264.0" mnemonicParsing="false" text="Business Account" />
-                  <CheckBox fx:id="PrivateCheckBox" layoutX="429.0" layoutY="135.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="129.0" text="Private Account" />
-                  <Label layoutX="342.0" layoutY="39.0" text="Account Type">
-                     <font>
-                        <Font name="Levenim MT Bold" size="48.0" />
-                     </font>
-                  </Label>
-                  <ImageView fitHeight="255.0" fitWidth="260.0" layoutX="584.0" layoutY="393.0" pickOnBounds="true" preserveRatio="true">
+                  <TextField fx:id="budget_lbl" layoutX="419.0" layoutY="365.0" promptText="Monthly Budget ">
+                     <styleClass>
+                        <String fx:value="text-box" />
+                        <String fx:value="lbl" />
+                     </styleClass></TextField>
+                  <CheckBox fx:id="BusinessCheckBox" layoutX="437.0" layoutY="264.0" mnemonicParsing="false" styleClass="lbl" text="Business Account" />
+                  <CheckBox fx:id="PrivateCheckBox" layoutX="429.0" layoutY="135.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="129.0" styleClass="lbl" text="Private Account" />
+                  <ImageView fitHeight="255.0" fitWidth="260.0" layoutX="767.0" layoutY="412.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../img/MaleRegister.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="255.0" fitWidth="260.0" layoutX="197.0" layoutY="442.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="255.0" fitWidth="260.0" layoutX="145.0" layoutY="436.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../img/WomenRegister.png" />
                      </image>
