--- a/src/gui/menu/AddDishScreen.fxml
+++ b/src/gui/menu/AddDishScreen.fxml
@@ -1,21 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menu.AddDishController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menu.AddDishController">
    <children>
       <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
          <children>
-            <TextField fx:id="dish_name_input" layoutX="420.0" layoutY="261.0" text="Dish Name" />
-            <ComboBox fx:id="dish_type_cmb" layoutX="419.0" layoutY="325.0" prefWidth="150.0" promptText="Dish Type" />
-            <Button fx:id="add_btn" layoutX="452.0" layoutY="409.0" mnemonicParsing="false" onAction="#addDish" text="Add Dish" />
-            <Label fx:id="result_lbl" layoutX="470.0" layoutY="468.0" />
+            <TextField fx:id="dish_name_input" layoutX="208.0" layoutY="112.0" promptText="Dish Name" stylesheets="@../general/GeneralStyleSheet.css">
+               <styleClass>
+                  <String fx:value="text-box" />
+                  <String fx:value="lbl" />
+               </styleClass></TextField>
+            <Button fx:id="add_btn" layoutX="386.0" layoutY="114.0" mnemonicParsing="false" onAction="#addDish" stylesheets="@../general/GeneralStyleSheet.css" text="Add Dish">
+               <styleClass>
+                  <String fx:value="ViewBtnOrange" />
+                  <String fx:value="lbl" />
+               </styleClass></Button>
+            <Label fx:id="result_lbl" layoutX="212.0" layoutY="167.0" prefHeight="17.0" prefWidth="153.0" styleClass="lbl" />
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="441.0" layoutY="244.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/undraw_cooking_lyxy.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
    </children>
