--- a/src/gui/order/OrderInformationScreen.fxml
+++ b/src/gui/order/OrderInformationScreen.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.OrderInformationController">
+<VBox alignment="CENTER" fillWidth="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="order.OrderInformationController">
    <children>
       <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" VBox.vgrow="ALWAYS">
          <children>
@@ -41,7 +41,7 @@
                         <Tooltip fx:id="hour_tooltip" text="Time format: HH:MM" />
                      </tooltip>
                      <styleClass>
-                        <String fx:value="comboBox" />
+                        <String fx:value="text-box" />
                         <String fx:value="lbl" />
                      </styleClass>
                   </TextField>
@@ -154,7 +154,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </GridPane>
-            <Button fx:id="back_btn" layoutX="30.0" layoutY="591.0" mnemonicParsing="false" onAction="#back" prefHeight="36.0" prefWidth="78.0" stylesheets="@../general/GeneralStyleSheet.css" text="Back">
+            <Button fx:id="back_btn" layoutX="30.0" layoutY="583.0" mnemonicParsing="false" onAction="#back" prefHeight="44.0" prefWidth="86.0" stylesheets="@../general/GeneralStyleSheet.css" text="Back">
                <styleClass>
                   <String fx:value="ViewBtn" />
                   <String fx:value="lbl" />
